=== shared-mime-info 0.40 ===

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.40
	* Makefile.am: Fix distchecking

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/hereyes_remake.mo3:
	* tests/list: Add a mime-type for the MO3 tracker file type,
	along with a test file (Closes: #16291)

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Wilbert Berendsen
	<wbsoft@xs4all.nl> to add a mime-type for Lilypond music sheets
	(Closes: #13883)
	* tests/list:
	* tests/petite-ouverture-a-danser.ly: Add a test file for the
	text/x-lilypond mime-type

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Tighten the magic for PBM,
	PPM and PGM types, so as to avoid false positives
	(Closes: #2359)
	* tests/list:
	* tests/test.pbm: Add a pbm test file

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make application/x-gnuplot a
	sub-class-of text/plain (Closes: #15852)

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add "Subject: " as a match
	for message/rfc822 mime-types

	* tests/evo.msg: Remove, it was unused

	* tests/list:
	* tests/evolution.eml:
	* tests/tb-from-sentbox.eml:
	* tests/tb-saved.eml: Add some message test cases

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the OXT mimetype, for
	OpenOffice extensions
	* tests/Anaphraseus-1.21-beta.oxt:
	* tests/list: Add test file
	(Closes: #15110)

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make text/x-readme have a weight
	of 10 (very low) so README.pdf doesn't get matched with
	text/x-readme

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/bathead.sk:
	* tests/list: Add image/x-skencil mime-type for Skencil
	files, with help from Tim Beaulen <tbscope@gmail.com>
	(Closes: #16050)

2008-06-11  Bastien Nocera  <hadess@hadess.net>
