@@ -35,6 +35,8 @@ test.xwd image/x-xwindowdump ox
 test.kdc image/x-kodak-kdc
 # Copied from http://www.skencil.org/gallery.html
 bathead.sk image/x-skencil
+# Copied from http://www.geocities.com/CapeCanaveral/1939/256cur95.zip
+jc-win.ani application/x-navi-animation
 
 # Documents
 ooo-6.0.doc application/msword
