@@ -1,3 +1,10 @@
+2008-06-19  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add Windows animated cursor
+	from the gdk-pixbuf loader magic (Closes: #16409)
+	* tests/jc-win.ani:
+	* tests/list: Add test case
+
 === shared-mime-info 0.40 ===
 
 2008-06-11  Bastien Nocera  <hadess@hadess.net>
